attempted to display icons below boxplot using a separate dbc.Row with the icons lined up, hoping they would align with tick axes. it's a nightmare to try to get them to line up so that's not the route to go down. going to stick with images laid over the boxplot and a fixed opening under the horizontal baseline for those images to go in. the only downside is when the images shrink if the viewport shrinks horizontally, the 10px-tall margin stays.
Former-commit-id: fdad91ecd41c47b91dd096217b63508b3436de2d

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -17,7 +17,7 @@ body {
 }
 
 /* Custom classes */
-.input-field {
+.username-input {
     padding-left: 0.5em;
     border: solid;
     border-radius: 0.15em;
